<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACCIO</string>
    <string name="bienvenue">Bienvenue sur ACCIO</string>
    <string name="action_settings">Options</string>
    <string name="choose_fridge">Choisissez votre réfrigérateur :</string>
    <string name="title_activity_menu">Menu</string>
    <string name="fridge_content">Contenu</string>
    <string name="recipes">Recettes</string>
    <string name="favorite">Favoris</string>
    <string name="historique">Historique</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_content">Vos boîtes Accio</string>
    <string name="title_activity_recipes">Vos Recettes</string>
    <string name="title_activity_favoris">Vos Favoris</string>
    <string name="title_activity_historique">Votre Historique</string>
    <string name="action_search">Recherche</string>
    <string name="logo">Logo</string>
    <string name="contenu_bouton1">Légumes</string>
    <string name="contenu_bouton2">Viandes</string>
    <string name="contenu_bouton3">Yaourts</string>
    <string name="contenu_bouton4">Desserts</string>
    <string name="contenu_bouton5">Fruits</string>
    <string name="contenu_bouton6">Fromages</string>
    <string name="title_activity_legumes">Legumes</string>
    <string name="title_activity_content_viandes">Viandes</string>
    <string name="title_activity_content_yaourts">Yaourts</string>
    <string name="title_activity_content_desserts">Desserts</string>
    <string name="title_activity_content_fruits">Fruits</string>
    <string name="title_activity_new_frigo">Nouveau réfrigérateur</string>
    <string name="new_frigo_name">Nom du nouveau réfrigérateur</string>
    <string name="new_frigo_create">Créer</string>
    <string name="title_activity_new_box">Nouvelle boîte Accio</string>
    <string name="numero_boite">Numéro de la boîte</string>
    <string name="code_boite">Code d\'activation de la boîte</string>
    <string name="nom_boite">Nom de la nouvelle boîte</string>
    <string name="help">Aide</string>
    <string name="type_boite">Sélectionnez le type de compartiment en cliquant sur le carré souhaité :</string>
    <string name="title_activity_box">Contenu</string>
    <string name="title_activity_aide_nouvelle_boite">Aide</string>
    <string name="aide_nouvelle_boite_1">Pour créer une nouvelle boîte, vous devez entrer
        le numéro de la boîte Accio et le code d\'activation qui se trouvent derrière votre boîte.</string>
    <string name="aide_nouvelle_boite_remarque_temporaire">REMARQUE : pour l\'instant, le code de toutes les boîtes est le même : accio</string>
    <string name="aide_nouvelle_boite_2">Le choix du type de boîte est important : Accio ne cherchera à reconnaître que des aliments du type indiqué.
        Vous pourrez changer le type de la boîte par la suite si vous le désirez.</string>
    <string name="title_activity_recette_marmiton">Recette Marmiton</string>
    <string name="title_activity_choix_aliments_recettes">Choix des aliments</string>
    <string name="title_activity_recette_favorie">Recette Marmiton</string>
    <string name="title_activity_enregistrer_recette">Enregistrer une recette</string>
    <string name="new_recette_name">Nom de la recette</string>
    <string name="title_activity_box_options">Renommer la boîte</string>
    <string name="title_activity_frigo_options">Renommer le réfrigérateur</string>
    <string name="title_activity_aliment">Aliment</string>
    <string name="title_activity_aide_aliment">Aide</string>
    <string name="aide_aliment">Pour rendre l\'aliment favori ou le supprimer de la liste des favoris, cliquer sur l\'image</string>
    <string name="title_activity_historique_boite">Historique de la boîte</string>
    <string name="title_activity_options_recette_enregistree">Options Recette</string>
    <string name="ajout_alim">Ajout aliment</string>
    <string name="title_activity_ajout_aliment">Ajout Aliment</string>
    <string name="action_refresh">Actualiser</string>
    <string name="action_rename">Renommer</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_credit">À propos</string>
    <string name="action_site">Lien vers le site</string>
    <string name="action_help">Aide</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_credit">À propos</string>

</resources>