<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.delcourt.samuel.accio.ContentActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenu_bouton1"
        android:id="@+id/button7"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_one"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_one"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenu_bouton2"
        android:id="@+id/button8"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_one"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_two"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenu_bouton3"
        android:id="@+id/button9"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_two"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_one"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenu_bouton4"
        android:id="@+id/button10"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_two"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_two"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenu_bouton5"
        android:id="@+id/button11"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_three"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_one"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenu_bouton6"
        android:id="@+id/button12"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_three"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_two"/>

</RelativeLayout>
