<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.delcourt.samuel.accio.RefrigerateurActivity">



    <item android:id="@+id/action_rename"
        android:title="@string/action_rename"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!-- Bouton search dans la bar d'action -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
</menu>
