<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <!-- Bouton search dans la bar d'action -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <!-- tentative de mettre le logo dans la barre de tache  -->
    <item android:id="@+id/logo"
        android:icon="@drawable/ic_logo"
        android:title="@string/logo"
        app:showAsAction="ifRoom" />

</menu>
