<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.delcourt.samuel.accio.create_new_object_activities.NewBoxActivity">

    <EditText
        android:id="@+id/numeroBoite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_boite"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="68dp" />

    <EditText
        android:id="@+id/codeActivationBoite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_boite"
        android:layout_below="@+id/numeroBoite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/nomBoite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_boite"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
