<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.delcourt.samuel.accio.RefrigerateurActivity">

    <Button
        style="@style/MenuButton"
        android:text="@string/fridge_content"
        android:id="@+id/buttonContenu"
        android:onClick="sendMessageContent"
        android:layout_below="@+id/frigoNameMenu"
        android:layout_marginTop="15dp"/>

    <Button
        style="@style/MenuButton"
        android:text="@string/recipes"
        android:id="@+id/buttonRecettes"
        android:onClick="sendMessageRecipes"
        android:layout_below="@+id/buttonContenu"
        android:layout_marginTop="15dp" />

    <Button
        style="@style/MenuButton"
        android:text="@string/favorite"
        android:id="@+id/buttonFavoris"
        android:onClick="sendMessageFavorite"
        android:layout_below="@+id/buttonRecettes"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/frigoNameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nom frigo"
        android:textSize="20dp" />





    <Button
        style="@style/MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ajout_alim"
        android:layout_alignParentRight="true"
        android:text="@string/ajout_alim"
        android:layout_below="@+id/frigoNameMenu"
        android:layout_marginTop="15dp"
        android:onClick="sendMessageAjoutAliment"/>


</RelativeLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>