<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.delcourt.samuel.accio.MenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fridge_content"
        android:id="@+id/button2"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_one"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_one"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:onClick="sendMessageContent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipes"
        android:id="@+id/button3"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_two"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_one"
        android:onClick="sendMessageRecipes"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:id="@+id/button4"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_one"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_two"
        android:onClick="sendMessageFavorite"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historique"
        android:id="@+id/button5"
        android:layout_marginTop="@dimen/activity_content_Boutons_topMargin_two"
        android:layout_marginLeft="@dimen/activity_content_Boutons_left_margin_two"
        android:onClick="sendMessageHistorique"/>

    <TextView
        android:id="@+id/frigoNameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nom frigo"
        android:textSize="20dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aide"
        android:id="@+id/button6"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        android:onClick="sendMessageHelp"/>


</RelativeLayout>
